chore: resets page on search in archives and prevents layout shift in team selector

--- a/src/app/cloud/[team-slug]/page.module.scss
+++ b/src/app/cloud/[team-slug]/page.module.scss
@@ -64,3 +64,7 @@
     position: relative;
     margin: 0 0 calc(var(--base) * 2) 0;
 }
+
+.pagination {
+    margin-top: calc(var(--base) * 2);
+}
